Fix CSS and JS file paths

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="jkprasad.css">
 
   <!-- SEO & accessibility hints -->
   <meta name="theme-color" content="#FFFFFF" />
@@ -277,7 +277,7 @@
   <!-- AOS JS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- main JS -->
-  <script src="js/main.js"></script>
+  <script src="jkprasad.js"></script>
   <script>
     AOS.init({ once: true, duration: 700 });
   </script>
